some more css security fixes Mobile users can click on the title to scroll up CSS improvements for mobile users (profile info) Tag scrolling for long tag lists And vertical align for mobile menu lol

--- a/src/app/user/home/entries/postEntry.module.css
+++ b/src/app/user/home/entries/postEntry.module.css
@@ -67,6 +67,7 @@
     white-space: pre-line;
     padding: 0.8rem 1rem 0.5rem 1rem;
     color: var(--text-gray);
+    overflow-x: auto;
 }
 
 .PostTags span {
