--- a/src/app/user/public_info_settings/page.module.css
+++ b/src/app/user/public_info_settings/page.module.css
@@ -41,6 +41,8 @@
     display: block;
     margin: auto;
     width: max-content;
+    padding: 0.3rem 0.5rem 0.3rem 0.5rem;
+    font-size: 1.1rem;
 }
 
 .FinalButtonContainer {
@@ -53,4 +55,30 @@
 .FinalButtonContainer button {
     padding: 0.5rem 1rem 0.5rem 1rem;
     font-size: 1.4rem;
+}
+
+
+@media (max-width: 900px) {
+    .MainDiv h3 {
+        font-size: 1.2rem;
+    }
+
+    .MainDiv input {
+        font-size: 1rem;
+        width: 90%;
+    }
+
+    .MainDiv textarea {
+        font-size: 1rem;
+        width: 90%;
+        min-height: 12rem;
+    }
+
+    .MainDiv button {
+        font-size: 1rem;
+    }
+
+    .FinalButtonContainer button {
+        font-size: 1.1rem;
+    }
 }
