--- a/src/comp/unified_layout/unifiedMenu.module.css
+++ b/src/comp/unified_layout/unifiedMenu.module.css
@@ -107,6 +107,7 @@
     font-weight: bold;
     font-size: 1.1rem;
     padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+    align-content: center;
 }
 
 .LeftNavDivMobileBody a:hover {
